[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot_icon/IconCreator.gd" type="Script" id=1]

[node name="GodotIconCreator" type="ConfirmationDialog"]
margin_right = 350.0
margin_bottom = 480.0
rect_min_size = Vector2( 480, 320 )
window_title = "Choose images & icon path"
resizable = true
script = ExtResource( 1 )

[node name="ChooseImagesDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 444.0
rect_min_size = Vector2( 480, 320 )
window_title = "Choose image(s)"
resizable = true
mode_overrides_title = false
mode = 1
access = 2
filters = PoolStringArray( "*.png; PNG files" )

[node name="ChooseIconDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 444.0
rect_min_size = Vector2( 480, 320 )
window_title = "Choose icon path"
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.ico; Windows icon files" )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 444.0

[node name="ChooseImages" type="Button" parent="Buttons"]
margin_right = 480.0
margin_bottom = 20.0
text = "Choose image(s)"
clip_text = true

[node name="ChooseIcon" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 480.0
margin_bottom = 44.0
text = "Choose icon"

[node name="Images" type="GridContainer" parent="Buttons"]
margin_top = 48.0
margin_right = 480.0
margin_bottom = 48.0
columns = 2

[node name="Errors" type="Label" parent="Buttons"]
margin_top = 52.0
margin_right = 480.0
margin_bottom = 66.0
text = "Please choose single file for your icon or six images with sizes:
16x16, 32x32, 48x48, 64x64, 128x128 and 256x256."
